Set index.php as the homepage. Add 404 and 500s error handling pages. Only allow scripts from the same origin and disable plugins

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,9 +1,21 @@
 server {
     listen 0.0.0.0:80;
     root /var/www/html;
+    index index.php;
+
+    # Disable plugins and only allow scripts from the same origin
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; object-src 'none';" always;
     
+    # 404 and 503 pages
+    error_page 404 /not_found.html;
+    error_page 500 502 503 504 /500s_page.html;
+
+    location = /not_found.html {
+        internal;
+    }
+
     location / {
-        try_files $uri /index.php$is_args$args;
+        try_files $uri $uri/ =404;
     }
 
     location ~ \.php$ {
@@ -11,5 +23,6 @@ server {
         fastcgi_pass php:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        try_files $uri =404;
     }
 }
