Swapped error pages to PHP so I can load the footers, banners, styles, etc.. dynamically

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,10 +7,15 @@ server {
     add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; object-src 'none';" always;
     
     # 404 and 503 pages
-    error_page 404 /not_found.html;
-    error_page 500 502 503 504 /500s_page.html;
+    error_page 404 /not_found.php;
+    error_page 500 502 503 504 /500s_page.php;
 
-    location = /not_found.html {
+    location = /not_found.php {
+        try_files $uri =404;
+        include fastcgi_params;
+        fastcgi_pass php:9000;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+
         internal;
     }
 
