--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,8 +4,8 @@ server {
     index index.php;
 
     # Disable plugins and only allow scripts from the same origin
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; object-src 'none';" always;
-    
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; object-src 'none'; style-src 'self' https://fonts.googleapis.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; font-src 'self' https://fonts.gstatic.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com;" always;
+
     # 404 and 503 pages
     error_page 404 /not_found.php;
     error_page 500 502 503 504 /500s_page.php;
