--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -15,12 +15,11 @@ server {
         include fastcgi_params;
         fastcgi_pass php:9000;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-
         internal;
     }
 
     location / {
-        try_files $uri $uri/ =404;
+        try_files $uri $uri/ @remove_extension;
     }
 
     location ~ \.php$ {
@@ -29,5 +28,9 @@ server {
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         try_files $uri =404;
+    }
+
+    location @remove_extension {
+        rewrite ^(.*)$ $1.php last;
     }
 }
